--- a/misc/replace-.lnk-with-symlinks/package.json
+++ b/misc/replace-.lnk-with-symlinks/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "replace-.lnk-with-symlinks.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "printf \"Error: no test specified\n\" && exit 1"
   },
   "keywords": [],
   "author": "",
