--- a/webdev/hash-password/package.json
+++ b/webdev/hash-password/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "hash-pasword.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "printf \"Error: no test specified\n\" && exit 1"
   },
   "keywords": [],
   "author": "",
